--- a/GSS_Control_Station/GSSControlStation/connectdialog.ui
+++ b/GSS_Control_Station/GSSControlStation/connectdialog.ui
@@ -170,29 +170,22 @@
     </item>
    </layout>
   </widget>
-  <widget class="QWidget" name="">
+  <widget class="QWidget" name="layoutWidget">
    <property name="geometry">
     <rect>
      <x>9</x>
      <y>263</y>
-     <width>221</width>
+     <width>230</width>
      <height>27</height>
     </rect>
    </property>
    <layout class="QHBoxLayout" name="horizontalLayout_8">
     <item>
-     <widget class="QLabel" name="linkstatuslabel">
-      <property name="text">
-       <string>Disconnected</string>
-      </property>
-     </widget>
-    </item>
-    <item>
      <layout class="QHBoxLayout" name="horizontalLayout_7">
       <item>
-       <widget class="QPushButton" name="connectButton">
+       <widget class="QPushButton" name="ComOKBtn">
         <property name="text">
-         <string>Connect</string>
+         <string>OK</string>
         </property>
        </widget>
       </item>
