- Lưu trước khi chuyển qua thiết kế widget trung tâm

--- a/src/ui/mainwindow.ui
+++ b/src/ui/mainwindow.ui
@@ -58,6 +58,9 @@
     </property>
     <addaction name="actionEngineerView"/>
     <addaction name="actionOperatorView"/>
+    <addaction name="separator"/>
+    <addaction name="actionFull_screen"/>
+    <addaction name="actionNormal"/>
    </widget>
    <widget class="QMenu" name="menuMain_Widgets">
     <property name="title">
@@ -207,6 +210,16 @@
     <string>Exit</string>
    </property>
   </action>
+  <action name="actionFull_screen">
+   <property name="text">
+    <string>Full screen</string>
+   </property>
+  </action>
+  <action name="actionNormal">
+   <property name="text">
+    <string>Normal</string>
+   </property>
+  </action>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
  <resources>
@@ -218,6 +231,38 @@
    <signal>triggered()</signal>
    <receiver>MainWindow</receiver>
    <slot>close()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>-1</x>
+     <y>-1</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionFull_screen</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>showFullScreen()</slot>
+   <hints>
+    <hint type="sourcelabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+    <hint type="destinationlabel">
+     <x>399</x>
+     <y>299</y>
+    </hint>
+   </hints>
+  </connection>
+  <connection>
+   <sender>actionNormal</sender>
+   <signal>triggered()</signal>
+   <receiver>MainWindow</receiver>
+   <slot>showNormal()</slot>
    <hints>
     <hint type="sourcelabel">
      <x>-1</x>
